update kgsl & sync framework from CAF jb-2.5.5

--- a/arch/arm/configs/pico_defconfig
+++ b/arch/arm/configs/pico_defconfig
@@ -1848,6 +1848,7 @@ CONFIG_ION=y
 CONFIG_ION_MSM=y
 CONFIG_MSM_MULTIMEDIA_USE_ION=y
 CONFIG_MSM_KGSL=y
+CONFIG_KGSL_COMPAT=y
 # CONFIG_MSM_KGSL_CFF_DUMP is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_CP_STAT_NO_DETAIL is not set
 # CONFIG_MSM_KGSL_PSTMRTMDMP_NO_IB_DUMP is not set
