--- a/arch/arm/configs/pico_defconfig
+++ b/arch/arm/configs/pico_defconfig
@@ -407,7 +407,7 @@ CONFIG_MSM_CPU_FREQ_MAX=600000
 CONFIG_MSM_CPU_FREQ_MIN=122880
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MAX=600000
 CONFIG_MSM_CPU_FREQ_ONDEMAND_MIN=122880
-CONFIG_MSM_CPU_FREQ_OVERCLOCK=y
+# CONFIG_MSM_CPU_FREQ_OVERCLOCK is not set
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
 CONFIG_MSM_ADSP=y
