--- a/arch/arm/configs/pico_defconfig
+++ b/arch/arm/configs/pico_defconfig
@@ -54,6 +54,9 @@ CONFIG_SWAP=y
 # CONFIG_FHANDLE is not set
 # CONFIG_TASKSTATS is not set
 CONFIG_AUDIT=y
+CONFIG_AUDITSYSCALL=y
+CONFIG_AUDIT_WATCH=y
+CONFIG_AUDIT_TREE=y
 CONFIG_HAVE_GENERIC_HARDIRQS=y
 
 #
